--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,8 +38,8 @@
           <!-- {% include footer.html %} -->
       </div>
 
-      <div class="main">
-          {{ content }}
+      <div class="blog-main">
+          {{ page.content }}
       </div>
 
 
