--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <dl class="row">
           <dd>Address</dd>
           <dt>Centro de Biotecnología y Genómica de Plantas UPM – INIA Parque Científico y Tecnológico de la U.P.M. Campus de Montegancedo
-Autopista M-40, Km 38 - 28223 Pozuelo de Alarcón (Madrid) Tel.: +34 91 4524900 ext. 1806 / +34 91 3364539 Fax: +34 91 7157721. Localización y Contacto</dt>
+Autopista M-40, Km 38 - 28223 Pozuelo de Alarcón (Madrid) Tel.: +34 91 4524900 ext. 1806 / +34 91 3364539 Fax: +34 91 7157721</dt>
         </dl>
       </div>
     </div>
