--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
 #contact{
   padding: 2rem;
-  text-align: center;
+  // text-align: center;
 }
 
 .front-page {
@@ -44,6 +44,21 @@
     padding-top: 5rem;
 }
 
+
+.blog-main {
+    display: inline-block;
+    float: right;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 59%;
+    overflow-y: scroll;
+    padding-right: 2rem;
+    padding-top: 5rem;
+    padding-left: 2rem;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -58,17 +73,24 @@
 }
 
 #profile-pic-mainpage {
-    border-radius: 50%;
+    border-radius: 100%;
     width: 150px;
     padding: 1rem;
+}
+
+
+.card-title {
+    font-size: 1.25rem;
 }
 
 .card-container {
     display: grid;
     padding: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1rem;
 }
+
+
 
 #infographic {
     padding-left: 5rem;
@@ -79,7 +101,7 @@
     // padding-left: 2rem;
 }
 .synopsis {
-    font-size: 30px;
+    font-size: 20px;
     padding-top: 1rem;
     font-weight: 300;
     padding-bottom: 2rem;
